compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@unreferenced_function__event_function.tapir.snap
---
source: crates/tapir-script/compiler/src/compile/ir/optimisations.rs
expression: output
input_file: crates/tapir-script/compiler/src/compile/ir/snapshot_tests/optimisations/unreferenced_function/event_function.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.10 = int 9
temp.11 = temp.10
storeprop temp.11, 0
return 

=======================
event fn foo() -> 

---- block 0 ----
temp.12 = int 5
temp.13 = bar(temp.12)
temp.14 = temp.13
storeprop temp.14, 0
return 

=======================
fn bar(x.1) -> int

---- block 0 ----
temp.15 = x.1
return temp.15

=======================
fn baz(x.2) -> int

---- block 0 ----
temp.16 = x.2
return temp.16


----------- remove_unreferenced_functions -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.10 = int 9
temp.11 = temp.10
storeprop temp.11, 0
return 

=======================
event fn foo() -> 

---- block 0 ----
temp.12 = int 5
temp.13 = bar(temp.12)
temp.14 = temp.13
storeprop temp.14, 0
return 

=======================
fn bar(x.1) -> int

---- block 0 ----
temp.15 = x.1
return temp.15
