compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@unreferenced_function__spawn_function.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/unreferenced_function/spawn_function.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.8 = int 5
temp.9 = spawn spawned(temp.8)
return 

=======================
fn foo(x.1) -> int

---- block 0 ----
temp.10 = x.1
return temp.10

=======================
fn spawned(x.2) -> 

---- block 0 ----
wait
temp.11 = x.2
temp.12 = temp.11
storeprop temp.12, 0
return 


----------- remove_unreferenced_functions -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.8 = int 5
temp.9 = spawn spawned(temp.8)
return 

=======================
fn spawned(x.2) -> 

---- block 0 ----
wait
temp.11 = x.2
temp.12 = temp.11
storeprop temp.12, 0
return
