compiler/src/compile/ir/snapshots/compiler__compile__ir__optimisations__test__optimisation_snapshot_tests@unreferenced_function__unused_function.tapir.snap
---
source: compiler/src/compile/ir/optimisations.rs
expression: output
input_file: compiler/src/compile/ir/snapshot_tests/optimisations/unreferenced_function/unused_function.tapir
---
----------- before -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 5
temp.8 = foo(temp.7)
storeprop temp.8, 0
return 

=======================
fn foo(x.1) -> int

---- block 0 ----
temp.9 = x.1
return temp.9

=======================
fn bar(y.2) -> int

---- block 0 ----
temp.10 = y.2
return temp.10


----------- remove_unreferenced_functions -------------
=======================
fn @toplevel() -> 

---- block 0 ----
temp.7 = int 5
temp.8 = foo(temp.7)
storeprop temp.8, 0
return 

=======================
fn foo(x.1) -> int

---- block 0 ----
temp.9 = x.1
return temp.9
